--- a/QuizProdigy-Angular/package.json
+++ b/QuizProdigy-Angular/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.3",
     "express": "^4.18.2",
+    "ng2-cookies": "^1.0.12",
+    "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
